kuberdef/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coursey-nginx
  labels:
    app: coursey-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coursey-nginx
  template:
    metadata:
      labels:
        app: coursey-nginx
    spec:
      containers:
      - name: nginx
        image: gryffin0109/courseyproject:nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        - containerPort: 8082
          name: admin
        volumeMounts:
        - name: backend-config
          mountPath: /app/adminpanel/api-config.js
          subPath: api-config.js
          readOnly: true

      volumes:
      - name: backend-config
        configMap:
          name: backend-config
