kuberdef/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: coursey-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: admin
      port: 8082
      targetPort: 8082
  type: ClusterIP
