kuberdef/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coursey-admin-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: admin.gryffin-uit.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8082
