kuberdef/coursey-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coursey-ingress
  labels:
    app: coursey
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:

  # ---------------- API -----------------
  - host: api.gryffin-uit.site
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service
            port:
              number: 80

  # ---------------- ADMIN PANEL -----------------
  - host: admin.gryffin-uit.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8082
